css/style.css
.hero{
  background : #00AAB2;
  background : rgba(0, 170, 178, 1);
  width : 1440px;
  height : 460px;
}

.hero-logo {
	position: relative;
}
.hero-illustration {
	margin-top: 10px;
	padding-top: 20px;
	padding-left: 30px;
}

.logo-search {
	margin-top: 25px;
}

/* Search Bar */
.search-bar {
	position: relative;
	float: right;
	margin-top: 7px;
}

/*Navigation bar */

.nav-top {
	width : 524px;
  	height : 27px;
	margin-top: 37px;
	font-weight: bold;
}

.nav-top ul {
	margin: 0;
	padding: 0;
	text-align: right;
	color: #FFFFFF;
	float: right;
}

.nav-top ul li {
	list-style: none;
	display: inline-block;
	padding: 0 10px 0;
}

.nav-top ul li a {
	text-decoration: none;
	color: #FFFFFF;
}

.nav-top ul li a:hover {
	color: blue;
}

/* Hero Content*/

.hero-tagline {
	margin-top: 60px;
	padding-top: 30px;
	color: #ffffff;
}

.hero-p {
	max-width: 450px;
}

/* Benefits Sections*/

.benefits-fs {
	margin-top: 16%;
}

.benefits-four {
	
}

/* Track your diet */

.diet-image {
	float: left;
	margin-top: 100px;
	margin-bottom: 15px;
}

.track-icon {
	margin-bottom: 10px;
	margin-top: 30%;
}

.track-diet-p {
	margin-top: -10px;
}

/* Alt. Foods */

.c-alt-foods {

}

.alt-foods {
	background : #00AAB2;
 	background : rgba(0, 170, 178, 1);
    width : 1440px;
    height : 525px;
}

.alt-foods-section {
	margin-top: 80px;
}

.alt-foods-icon {
	color: #FFFFFF;
}

.food-alt-image {

}

.alt-foods-header {
	width: 400px;
	padding-top: 5px;
	margin-bottom: 10px;
	color: #FFFFFF;
}

.alt-foods-p {
	width: 280px;
	color: #FFFFFF;
	line-height : 27px;
}

/* Connect with Others */
.community-image {
	margin-bottom: 23%;
	margin-left: 8%;
	position: relative;
}

/* Custom Meals */
.custom-meals {
  background : #00AAB2;
  background : rgba(0, 170, 178, 1);
  width : 1440px;
  height : 796px;
}

.custom-meals-image {
	position: relative;
	margin-right: 10%;

}

.custom-meals-text {
	color: #FFFFFF;
	margin-left: 30px;
	margin-top: 70px;
	width : 310px;
  	height : 251px;
}

/* Pricing */

.pricing-header {
	text-align: center;
	line-height: 36px;
	position: relative;
	margin-top: 16%;
	margin-bottom: 4%;
}

.tables {
	list-style: none;
	position: relative;
}

.box {
  background-repeat : no-repeat;
  background : #E0E0E0;
  background : rgba(224, 224, 224, 1);
  border-radius : 4px;
  margin: auto;
  height : 369px;
  position: relative;

}

.table-header {
  background : #00AAB2;
  background : rgba(0, 170, 178, 1);
  border-radius : 4px;
  font-size: 24px;
  height : 66px;
  line-height: 65px;
  text-align: center;
  color: #ffffff;
}

.box ul {

}

.box ul li {
	list-style: none;
	text-align: center;
}

.box ul li a {

}

.princing-btn {
	margin-left: 15px;
}

.pricing-btn1 {
	margin-top: 31.5%;
}

/* Testimonial */
.testimonials-setup {

}

.testimonial {
	list-style: none;
}

.testimonial-name {
	position: absolute;
	margin-top: -13%;
	margin-left: 21%;
}

.test-icon {
	position: absolute;
	margin: 10px 30px;
}

.testimonial-h3 {
	text-align: center;
	margin-top: 16%;
}

.testimonial-p {
	text-align: center;
	font-size: 24px;
}

.testimonial-h3 .testimonial-p {
	margin-right: 5%;
}

.testimonial-quote {
	margin-left: 16%;
	margin-top: -6%;
	font-style: italic;
	width: 450px;
}

.circles {
	margin-left: 20%;
}

.circles li {
	list-style: none;
	display: inline-block;
	margin: 0 15px;
	width: 16px;
	height: 16px;
	border-radius: 32px;
	position: relative;
	background-color: #afafaf;
}

.circles .circle-1 {
	width: 16px;
	height: 16px;
	border-radius: 32px;
	background-color: grey;
	position: relative;
	background-color: #333333;
}



/* Footer */
.footer-nav {
	background-color: #00aab2;
	width : 1440px;
 	height : 197px;
}


.footer-links {
	float: right;
}

.footer-links li {
	list-style: none;
	line-height: 21px;
}

.footer-links li a {
	color: #FFFFFF;
}

.footer-links li a:hover {
	color: blue;
}

.footer-logo {
	margin-top: 30px;
}

.copyright-info {
	color: #FFFFFF;
}

.footer-btn {
	float: right;

}

